# studycobra

./: .gitignore  LICENSE  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example.env  makefile  mypy.ini  pyproject.toml
filebeat/: filebeat.yml
logstash/pipeline/: logstash.conf
migrations/models/: 0_20220719193303_init.sql  1_20220719212516_update.sql  2_20220720194802_update.sql  3_20220720195125_update.sql  4_20220720220059_update.sql  5_20220712215311_None.sql  5_20220720221052_update.sql  6_20220713205911_update.sql  6_20220721195643_update.sql  7_20220721200718_update.sql  8_20220726195905_update.sql  9_20220726200312_update.sql
src/: alembic.ini  executor.py  main.py  prestart.sh  pyproject.toml  tests-start.sh  worker-start.sh  worker.py
src/alembic/: env.py
src/api/: deps.py  routes.py
src/api/v1/: authorizations.py  files.py  groups.py  healthchecks.py  homework_answers.py  homeworks.py  lessons.py  students.py  teachers.py
src/core/: celery_app.py  config.py  database.py  logging_conf.py  security.py  sentry.py  tortoise_config.py
src/crud/: __init__.py  base.py  sessions.py  users.py
src/enums/: __init__.py  files.py  homeworks.py  quizzes.py  roles.py  sessions.py  tokens.py
src/exceptions/: __init__.py  exception_handler_mapping.py  exceptions.py  handlers.py  helpers.py  schemas.py
src/exceptions/translation/: __init__.py  pattern_translator_groupings.py  translations.json  translator.py
src/logger/: config.py  processors.py
src/models/: __init__.py  base.py  courses.py  files.py  groups.py  homeworks.py  lessons.py  quizzes.py  sessions.py  tasks.py  users.py
src/schemas/: __init__.py  base.py  courses.py  files.py  groups.py  healthchecks.py  homeworks.py  lessons.py  quizzes.py  sessions.py  tokens.py  users.py
src/sdk/: exceptions.py  healthchecks.py  http.py  security.py  utils.py
src/services/: __init__.py  authorization.py  group.py  quiz.py
src/sso_auth/: authentication.py  config.py  decorators.py  depends.py  exceptions.py  middlewares.py  users.py  utils.py
src/tests/: conftest.py  utils.py
src/tests/tests/: utils.py  (+2 more)
(+36 files in other folders)
